Fold enchant-lsmod into enchant (WIP)

--- a/lib/enchant.html
+++ b/lib/enchant.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.4 -->
-<!-- CreationDate: Sun May 26 12:58:50 2024 -->
+<!-- CreationDate: Sun Aug 11 20:50:33 2024 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -71,9 +71,10 @@ precedence.</p>
 <p style="margin-left:11%; margin-top: 1em">The ordering
 file takes the form <i>language_tag:&lt;comma-separated list
 of spelling providers&gt;</i>. To see what dictionaries are
-available, run <i>enchant-lsmod-2</i>. &rsquo;*&rsquo; is
-used to mean &ldquo;use this ordering for all languages,
-unless instructed otherwise.&rdquo; For example:</p>
+available, run <i>enchant-2 --list-dicts</i>.
+&rsquo;*&rsquo; is used to mean &ldquo;use this ordering for
+all languages, unless instructed otherwise.&rdquo; For
+example:</p>
 
 
 <p style="margin-left:22%; margin-top: 1em">*:aspell,hunspell,nuspell
@@ -224,8 +225,7 @@ build.)</p>
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>enchant-2</b>(1),
-<b>enchant-lsmod-2</b>(1)</p>
+<p style="margin-left:11%; margin-top: 1em"><b>enchant-2</b>(1)</p>
 
 <h2>AUTHOR
 <a name="AUTHOR"></a>
