--- a/src/enchant-2.html
+++ b/src/enchant-2.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.4 -->
-<!-- CreationDate: Sun Aug 11 20:04:42 2024 -->
+<!-- CreationDate: Sun Aug 11 20:49:10 2024 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -35,8 +35,9 @@
 </h2>
 
 
-<p style="margin-left:11%; margin-top: 1em">Enchant - a
-spellchecker</p>
+<p style="margin-left:11%; margin-top: 1em">Enchant - list
+provider and dictionary information, and do basic batch
+spell-checking</p>
 
 <h2>SYNOPSIS
 <a name="SYNOPSIS"></a>
@@ -44,8 +45,9 @@ spellchecker</p>
 
 
 <p style="margin-left:11%; margin-top: 1em"><b>enchant-2
--a</b>|<b>-l</b>|<b>-h</b>|<b>-v</b> [<b>-L</b>] [<b>-d</b>
-<i>DICTIONARY</i>] [<i>FILE...</i>]</p>
+-l</b>|<b>-h</b>|<b>-v</b>|<b>-lang</b>|<b>-word-chars</b>]
+[<b>language_tag</b>]|<b>-list-dicts</b>] [<b>-L</b>]
+[<b>-d</b> <i>DICTIONARY</i>] [<i>FILE...</i>]</p>
 
 <h2>DESCRIPTION
 <a name="DESCRIPTION"></a>
@@ -53,7 +55,11 @@ spellchecker</p>
 
 
 <p style="margin-left:11%; margin-top: 1em"><b>Enchant</b>
-is a simple demo program for the Enchant library. <b><br>
+gives information about Enchant&rsquo;s spell-checker
+providers and the dictionaries each offers. See
+<b>enchant-2</b>(1) for details about how the providers and
+dictionaries are located. It can also list misspelled words
+in input files or on stdin. <b><br>
 -d</b> <i>DICTIONARY</i></p>
 
 <p style="margin-left:22%;">use the given dictionary</p>
@@ -67,11 +73,11 @@ wordlist</p>
        cellspacing="0" cellpadding="0">
 <tr valign="top" align="left">
 <td width="11%"></td>
-<td width="3%">
+<td width="7%">
 
 
 <p><b>-l</b></p></td>
-<td width="8%"></td>
+<td width="4%"></td>
 <td width="78%">
 
 
@@ -79,15 +85,42 @@ wordlist</p>
 input</p> </td></tr>
 <tr valign="top" align="left">
 <td width="11%"></td>
-<td width="3%">
+<td width="7%">
 
 
 <p><b>-L</b></p></td>
-<td width="8%"></td>
+<td width="4%"></td>
 <td width="78%">
 
 
 <p>display line numbers</p></td></tr>
+<tr valign="top" align="left">
+<td width="11%"></td>
+<td width="7%">
+
+
+<p><b>-lang</b></p></td>
+<td width="4%"></td>
+<td width="78%">
+
+
+<p>Show which provider and dictionary will be used for the
+given language, or all languages if none is supplied.</p></td></tr>
+</table>
+
+<p style="margin-left:11%;"><b>-word-chars</b></p>
+
+<p style="margin-left:22%;">Show the extra word characters
+for the given language, if available. This is of little
+interest to most users.</p>
+
+<p style="margin-left:11%;"><b>-list-dicts</b></p>
+
+<p style="margin-left:22%;">List the provider and
+dictionary for all available languages.</p>
+
+<table width="100%" border="0" rules="none" frame="void"
+       cellspacing="0" cellpadding="0">
 <tr valign="top" align="left">
 <td width="11%"></td>
 <td width="3%">
@@ -95,10 +128,12 @@ input</p> </td></tr>
 
 <p><b>-h</b></p></td>
 <td width="8%"></td>
-<td width="78%">
+<td width="55%">
 
 
-<p>display help and exit</p></td></tr>
+<p>display help and exit</p></td>
+<td width="23%">
+</td></tr>
 <tr valign="top" align="left">
 <td width="11%"></td>
 <td width="3%">
@@ -106,10 +141,12 @@ input</p> </td></tr>
 
 <p><b>-v</b></p></td>
 <td width="8%"></td>
-<td width="78%">
+<td width="55%">
 
 
-<p>display version information and exit</p></td></tr>
+<p>display version information and exit</p></td>
+<td width="23%">
+</td></tr>
 </table>
 
 <h2>FILES AND DIRECTORIES
@@ -128,7 +165,7 @@ personal word lists.</p>
 
 
 <p style="margin-left:11%; margin-top: 1em"><b>enchant-2</b>(5),
-<b>aspell</b>(1), <b>enchant-lsmod-2</b>(1)</p>
+<b>aspell</b>(1),</p>
 
 <h2>AUTHOR
 <a name="AUTHOR"></a>
